--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -1,5 +1,7 @@
+/* Typography CDN */
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:400,700&display=swap");
 body {
-  background: red;
+  background: #65e2d9;
 }
 
 /*# sourceMappingURL=main.css.map */
