added some base styles

--- a/styles/scss/_globals.sass
+++ b/styles/scss/_globals.sass
@@ -16,3 +16,13 @@ ul
   list-style-type: none
   margin: 0
   padding: 0
+
+a 
+  color: $white
+  text-decoration: none
+  border-bottom: 1px solid transparent
+  transition: $transition border-color, $transition color
+
+a:hover 
+  color: $cyan
+  border-color: $cyan
