--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -1,7 +1,34 @@
-/* Typography CDN */
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:400,700&display=swap");
-body {
-  background: #65e2d9;
+/* Reset */
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
+}
+
+*, *::before, *::after {
+  box-sizing: inherit;
+}
+
+body, h1, h2, h3, h4, p {
+  margin: 0;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+  border-bottom: 1px solid transparent;
+  transition: 300ms ease-in-out border-color, 300ms ease-in-out color;
+}
+
+a:hover {
+  color: #65e2d9;
+  border-color: #65e2d9;
 }
 
 /*# sourceMappingURL=main.css.map */
