--- a/styles/scss/main.sass
+++ b/styles/scss/main.sass
@@ -1,6 +1,3 @@
-/* Typography CDN */
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:400,700&display=swap')
 @import './_vars.sass'
-
-body
-    background: $cyan
+@import './_globals.sass'
