--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -1,3 +1,3 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:400,700&display=swap");
-
-/*# sourceMappingURL=main.css.map */
+@import "./_vars.scss";
+@import "./_styles.scss";
