updated styles syntax

--- a/styles/scss/_vars.scss
+++ b/styles/scss/_vars.scss
@@ -5,7 +5,7 @@ $light-bg: hsl(217, 28%, 15%);
 $footer-bg: hsl(216, 53%, 9%);
 $testimonials-bg: hsl(219, 30%, 18%);
 $cyan: hsl(176, 68%, 64%);
-$yan-blue: linear-gradient(
+$cyan-blue: linear-gradient(
   159deg,
   hsl(176, 68%, 64%) 0%,
   hsl(198, 60%, 50%) 65%
