--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -1,3 +1,49 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:400,700&display=swap");
+.hide {
+  display: none;
+}
+
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+p {
+  margin: 0;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+  border-bottom: 1px solid transparent;
+  transition: 300ms ease-in-out border-color, 300ms ease-in-out color;
+}
+
+a:hover {
+  color: #65e2d9;
+  border-color: #65e2d9;
+}
+
+body {
+  color: white;
+  background-color: #1c2431;
+}
 
 /*# sourceMappingURL=main.css.map */
