--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -46,4 +46,23 @@ body {
   background-color: #1c2431;
 }
 
+.t-header-nav {
+  letter-spacing: 0px;
+  font-family: "Raleway", sans-serif;
+  font-weight: 400;
+  text-decoration: none;
+}
+@media (max-width: 639px) {
+  .t-header-nav {
+    font-size: 1.2rem;
+    line-height: 1.167;
+  }
+}
+@media (min-width: 640px) {
+  .t-header-nav {
+    font-size: 1.6rem;
+    line-height: 1.1875;
+  }
+}
+
 /*# sourceMappingURL=main.css.map */
