--- a/styles/scss/_styles.scss
+++ b/styles/scss/_styles.scss
@@ -45,3 +45,22 @@ body {
   color: $white;
   background-color: $light-bg;
 }
+
+.t-header-nav {
+  letter-spacing: 0px;
+  font-family: $ff-raleway;
+  font-weight: $weight-regular;
+  text-decoration: none;
+  @media (max-width: 639px) {
+    & {
+      font-size: 1.2rem;
+      line-height: 1.167;
+    }
+  }
+  @media (min-width: 640px) {
+    & {
+      font-size: 1.6rem;
+      line-height: 1.1875;
+    }
+  }
+}
