--- a/styles/scss/_media.scss
+++ b/styles/scss/_media.scss
@@ -1,469 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:400,700&display=swap");
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:400,700&display=swap");
-.hide {
-  display: none;
-}
-
-/* Type Specs */
-.nav-text {
-  letter-spacing: 0px;
-  font-family: "Raleway", sans-serif;
-  font-weight: 400;
-  text-decoration: none;
-}
-
-.intro-heading {
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
-  letter-spacing: 0px;
-  line-height: 1.5;
-}
-
-.intro-body {
-  font-family: "Open Sans", sans-serif;
-  font-weight: 400;
-  letter-spacing: 0px;
-  line-height: 1.5;
-}
-
-.feature-heading {
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
-  letter-spacing: 0px;
-}
-
-.feature-body {
-  font-family: "Open Sans", sans-serif;
-  font-weight: 400;
-  letter-spacing: 0px;
-  font-size: 1.4rem;
-  line-height: 1.5;
-}
-
-.prod-heading {
-  font-weight: 700;
-  font-family: "Raleway", sans-serif;
-  letter-spacing: 0px;
-}
-
-.prod-body {
-  font-weight: 400;
-  font-family: "Open Sans", sans-serif;
-  letter-spacing: 0px;
-  line-height: 1.5;
-}
-
-.prod-link {
-  font-weight: 400;
-  font-family: "Open Sans", sans-serif;
-  letter-spacing: 0px;
-  line-height: 1.5;
-  color: #65e2d9;
-}
-
-.test-body {
-  font-weight: 400;
-  font-family: "Open Sans", sans-serif;
-}
-
-.profile-name {
-  font-family: "Open Sans", sans-serif;
-  font-weight: 700;
-  font-size: 1rem;
-  letter-spacing: 0.5px;
-  line-height: 1.2;
-}
-
-.profile-title {
-  font-weight: 400;
-  font-family: "Open Sans", sans-serif;
-  font-size: 0.8rem;
-  line-height: 1.25;
-  letter-spacing: 0.57px;
-}
-
-.cta-heading {
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
-  letter-spacing: 0px;
-}
-
-.cta-body,
-.footer-address,
-.footer-contact,
-.footer-nav-item {
-  font-family: "Open Sans", sans-serif;
-  font-weight: 400;
-  letter-spacing: 0px;
-}
-
-.cta-body,
-.footer-address,
-.footer-contact {
-  line-height: 1.5;
-}
-
-.cta-body {
-  font-size: 1.4rem;
-}
-
-.footer-address {
-  font-size: 1.6rem;
-}
-
-.footer-contact {
-  font-size: 1.4rem;
-}
-
-.footer-nav-item {
-  line-height: 1.375;
-  font-size: 1.6rem;
-}
-
-/* Buttons */
-.button {
-  background: linear-gradient(159deg, #65e2d9 0%, #339ecc 65%);
-  border: none;
-  color: white;
-  font-weight: 700;
-  font-family: "Raleway", sans-serif;
-  transition: 300ms ease-in-out filter, 300ms ease-in-out box-shadow, 300ms ease-in-out transform;
-}
-
-.button:hover {
-  filter: brightness(1.1);
-  transform: translateY(-2px);
-  box-shadow: 0 1rem 1rem rgba(99, 225, 217, 0.15);
-}
-
-.button--intro {
-  margin-top: 3.2rem;
-}
-
-.button:hover {
-  cursor: pointer;
-}
-
-/* Header */
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.menu__items {
-  display: flex;
-}
-
-@media (max-width: 639px) {
-  .menu__item:not(:last-child) {
-    margin-right: 2.4rem;
-  }
-}
-@media (min-width: 640px) and (max-width: 959px) {
-  .menu__item:not(:last-child) {
-    margin-right: 3rem;
-  }
-}
-@media (min-width: 960px) {
-  .menu__item:not(:last-child) {
-    margin-right: 5.8rem;
-  }
-}
-/* Main */
-/* Intro section */
-.intro {
-  text-align: center;
-}
-
-.intro__image {
-  width: 100%;
-}
-
-.intro__image__container {
-  width: 81.167%;
-  margin: 0 auto;
-  max-width: 72rem;
-}
-
-/* Features section */
-.features {
-  background-color: #181f2a;
-  text-align: center;
-}
-
-/* prod section */
-.prod {
-  background-color: #181f2a;
-}
-
-.prod__image__container {
-  display: flex;
-  margin: 0 auto;
-  max-width: 61.4rem;
-  align-items: center;
-  justify-content: center;
-}
-
-.prod__image {
-  width: 100%;
-}
-
-.prod__copy > :not(:last-child) {
-  margin-bottom: 1.6rem;
-}
-
-.prod-link {
-  display: inline-block;
-  text-decoration: none;
-  border-bottom: 0.1rem solid #65e2d9;
-  padding-bottom: 0.6rem;
-  transition: 300ms ease-in-out padding-left;
-}
-
-.prod-link::after {
-  content: "";
-  background-image: url(../../images/icon-arrow.svg);
-  background-size: contain;
-  display: inline-block;
-  vertical-align: middle;
-  width: 1.2rem;
-  height: 1.2rem;
-  margin-left: 0.7rem;
-}
-
-.prod-link:hover {
-  padding-left: 1.2rem;
-}
-
-/* Testimonials section */
-.testimonials {
-  background-color: #181f2a;
-  padding-bottom: 16rem;
-}
-
-.testimonials__container {
-  background-image: url(../../images/bg-quotes.png);
-  background-repeat: no-repeat;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-}
-
-.testimonial_card {
-  background-color: #202a3c;
-  border-radius: 0.393rem;
-  transition: 300ms ease-in-out transform, 300ms ease-in-out box-shadow;
-}
-
-.testimonial_card:hover {
-  transform: rotate(2deg);
-  box-shadow: 1rem 2rem 3rem rgba(0, 0, 0, 0.15);
-}
-
-.profile {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-.profile__avatar {
-  width: 2.4rem;
-  height: 2.4rem;
-  margin-right: 0.8rem;
-}
-
-.profile__avatar__image {
-  width: 100%;
-  border-radius: 50%;
-}
-
-.profile-name {
-  margin-bottom: 0.4rem;
-}
-
-/* Call to action section */
-.call-to-action {
-  background-color: #181f2a;
-  position: relative;
-  min-height: 35.3rem;
-  text-align: center;
-}
-
-.call-to-action::after {
-  content: " ";
-  background-color: #0b1523;
-  width: 100%;
-  position: absolute;
-  height: 47.32%;
-  bottom: 0;
-  left: 0;
-  z-index: 1;
-}
-
-.call-to-action__container {
-  border-radius: 0.9rem;
-  background-color: #1c2431;
-  margin: 0 auto;
-  box-shadow: 0.5rem 0.5rem 0.8rem rgba(0, 0, 0, 0.25);
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 2;
-  width: 89.6%;
-  max-width: 86.3rem;
-}
-
-.cta-heading {
-  margin-bottom: 1.6rem;
-}
-
-/* input group */
-.input-group {
-  display: flex;
-}
-
-.email-input {
-  border: none;
-  outline: none;
-  font-family: "Open Sans", sans-serif;
-  font-weight: 400;
-  border-radius: 2.4rem;
-}
-
-.email-input::placeholder {
-  color: #c0c0c0;
-}
-
-.email-input::-webkit-input-placeholder {
-  color: #c0c0c0;
-}
-
-.email-input::-moz-placeholder {
-  color: #c0c0c0;
-}
-
-.email-input:-ms-input-placeholder {
-  color: #c0c0c0;
-}
-
-.email-input:-moz-placeholder {
-  color: #c0c0c0;
-}
-
-.button--cta {
-  font-size: 1.4rem;
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
-  line-height: 1.143;
-  padding: 1.6rem 0;
-  border-radius: 2.4rem;
-}
-
-/* Footer */
-.footer {
-  background-color: #0b1523;
-}
-
-.footer-nav:first-of-type {
-  margin-right: 8rem;
-}
-
-.footer-nav:last-of-type {
-  margin-right: 11.4rem;
-}
-
-.footer-nav > :not(:last-child) {
-  margin-bottom: 1.6rem;
-}
-
-.address,
-.phone,
-.email {
-  display: flex;
-}
-
-.address {
-  max-width: 38rem;
-  margin-right: 8rem;
-}
-
-.phone,
-.address {
-  margin-bottom: 1.6rem;
-}
-
-.phone,
-.email {
-  align-items: center;
-}
-
-.contact {
-  margin-bottom: 8rem;
-  max-width: 17.1rem;
-  margin-right: 14.6rem;
-}
-
-.footer-nav {
-  margin-bottom: 4.8rem;
-}
-
-.vector-icon {
-  width: 2.4rem;
-  height: 2.4rem;
-  margin-right: 1.8rem;
-  display: flex;
-  align-items: center;
-}
-
-.vector-icon svg {
-  width: 100%;
-}
-
-.socials {
-  display: flex;
-  justify-content: center;
-}
-
-.social {
-  border: 1px solid white;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 2.7rem;
-  height: 2.7rem;
-  transition: 300ms ease-in-out border-color;
-}
-
-.social:hover {
-  cursor: pointer;
-  border-color: #65e2d9;
-}
-
-svg > path {
-  transition: 300ms ease-in-out fill;
-}
-
-.social:hover > svg > path {
-  fill: #65e2d9;
-}
-
-.social:not(:last-child) {
-  margin-right: 1rem;
-}
-
-.social__icon:first-child {
-  height: 1.2rem;
-}
-
-.social__icon {
-  width: 1.2rem;
-}
-
 @media (max-width: 639px) {
   .nav-text {
     font-size: 1.2rem;
@@ -476,6 +10,7 @@ svg > path {
     line-height: 1.1875;
   }
 }
+
 @media (max-width: 639px) {
   .intro-heading {
     font-size: 2.4rem;
@@ -486,6 +21,7 @@ svg > path {
     font-size: 4rem;
   }
 }
+
 @media (max-width: 639px) {
   .intro-body {
     font-size: 1.4rem;
@@ -496,6 +32,7 @@ svg > path {
     font-size: 2rem;
   }
 }
+
 @media (max-width: 639px) {
   .feature-heading {
     font-size: 1.8rem;
@@ -508,6 +45,7 @@ svg > path {
     line-height: 1.15;
   }
 }
+
 @media (max-width: 959px) {
   .prod-heading {
     font-size: 1.8rem;
@@ -520,6 +58,7 @@ svg > path {
     line-height: 1.25;
   }
 }
+
 @media (max-width: 959px) {
   .prod-body {
     font-size: 1.4rem;
@@ -530,6 +69,7 @@ svg > path {
     font-size: 1.6rem;
   }
 }
+
 @media (max-width: 959px) {
   .prod-link {
     font-size: 1.2rem;
@@ -542,6 +82,7 @@ svg > path {
     line-height: 1.375;
   }
 }
+
 @media (max-width: 639px) {
   .test-body {
     line-height: 1.8;
@@ -556,6 +97,7 @@ svg > path {
     letter-spacing: 0.5px;
   }
 }
+
 @media (max-width: 639px) {
   .cta-heading {
     font-size: 1.8rem;
@@ -568,13 +110,14 @@ svg > path {
     line-height: 1.5;
   }
 }
+
 @media (max-width: 639px) {
   .button--intro {
     padding: 1.6rem 0;
     font-size: 1.4rem;
     width: 24rem;
     line-height: 1.143;
-    border-radius: 2.4rem;
+    border-radius: $br-reg;
   }
 }
 @media (min-width: 640px) {
@@ -583,9 +126,10 @@ svg > path {
     font-size: 1.6rem;
     width: 28rem;
     line-height: 1.1875;
-    border-radius: 2.8rem;
+    border-radius: $br-lg;
   }
 }
+
 @media (max-width: 639px) {
   .header {
     padding: 2.4rem 2.4rem 0;
@@ -603,6 +147,7 @@ svg > path {
     margin: 0 auto;
   }
 }
+
 @media (max-width: 639px) {
   .brand__logo__image {
     width: 8rem;
@@ -618,19 +163,19 @@ svg > path {
     width: 17.6rem;
   }
 }
+
 @media (max-width: 639px) {
   .intro {
     padding-top: 4.8rem;
-    background: url(../../images/bg-curvy-mobile.svg), linear-gradient(#1c2431 61%, #181f2a 61%);
+    background: url(../../images/bg-curvy-mobile.svg),
+      linear-gradient($light-bg 61%, $main-bg 61%);
     background-position-y: 52%;
     background-repeat: no-repeat;
     background-size: contain;
   }
-
   .intro__content__container {
     padding: 0 3.3rem;
   }
-
   .intro-heading {
     margin-bottom: 1.5rem;
   }
@@ -643,15 +188,12 @@ svg > path {
     background-repeat: no-repeat;
     background-size: contain;
   }
-
   .intro__content__container {
     padding: 0 3rem;
   }
-
   .intro-heading {
     margin-bottom: 3.2rem;
   }
-
   .intro-body {
     max-width: 58.9rem;
     margin: 0 auto;
@@ -661,13 +203,13 @@ svg > path {
   .intro {
     padding-bottom: 16.3rem;
   }
-
   .intro__content__container {
     max-width: 73.4rem;
     margin: 0 auto;
     padding: 0 2rem;
   }
 }
+
 @media (max-width: 639px) {
   .intro__image__container {
     margin-bottom: 3.3rem;
@@ -678,6 +220,7 @@ svg > path {
     margin-bottom: 3.6rem;
   }
 }
+
 @media (max-width: 639px) {
   .features {
     padding: 12rem 2.7rem 16rem;
@@ -693,26 +236,25 @@ svg > path {
     padding: 0rem 2.7rem 16rem;
   }
 }
+
 @media (max-width: 799px) {
   .feature-cards-container {
     max-width: 50rem;
     margin: 0 auto;
   }
-
   .feature-heading {
     margin-top: 2.4rem;
     margin-bottom: 0.8rem;
   }
-
   .feature__card:not(:last-child) {
     margin-bottom: 8rem;
   }
-
   .feature__card__image {
     max-width: 6.4rem;
     max-height: 6.4rem;
   }
 }
+
 @media (min-width: 800px) {
   .feature-cards-container {
     margin: 0 auto;
@@ -721,7 +263,6 @@ svg > path {
     flex-wrap: wrap;
     justify-content: space-between;
   }
-
   .feature__card {
     width: 50%;
     max-width: 35rem;
@@ -729,16 +270,13 @@ svg > path {
     flex-direction: column;
     align-items: center;
   }
-
   .feature_card--upper {
     margin-bottom: 7.8rem;
   }
-
   .feature-heading {
     margin-top: 1.6rem;
     margin-bottom: 0.9rem;
   }
-
   .feature__card__image__container {
     max-width: 8.4rem;
     min-height: 8.8rem;
@@ -746,16 +284,15 @@ svg > path {
     align-items: center;
     justify-content: center;
   }
-
   .feature__card__image {
     width: 100%;
   }
 }
+
 @media (max-width: 639px) {
   .prod {
     padding-bottom: 16rem;
   }
-
   .prod__copy {
     padding: 0 2.8rem;
   }
@@ -764,11 +301,9 @@ svg > path {
   .prod {
     padding-bottom: 12rem;
   }
-
   .prod__copy {
     padding-left: 3rem;
   }
-
   .prod__container {
     display: flex;
     flex-direction: row;
@@ -776,20 +311,18 @@ svg > path {
     padding: 0 3rem;
   }
 }
+
 @media (min-width: 1235px) {
   .prod {
     padding-bottom: 12rem;
   }
-
   .prod__copy {
     padding-left: 5.7rem;
     max-width: 56.3rem;
   }
-
   .prod__copy > :first-child {
     width: 70%;
   }
-
   .prod__container {
     max-width: 123.5rem;
     margin: 0 auto;
@@ -798,21 +331,23 @@ svg > path {
     align-items: center;
   }
 }
+
 @media (max-width: 639px) {
   .prod__image__container {
     max-width: 30.4rem;
     margin-bottom: 4.8rem;
   }
-
   .prod__copy > :first-child {
     text-align: center;
   }
 }
+
 @media (min-width: 960px) {
   .testimonials {
     padding-bottom: 18.1rem;
   }
 }
+
 @media (max-width: 1199px) {
   .testimonials__container {
     padding: 0 2rem;
@@ -820,7 +355,6 @@ svg > path {
     background-position: 4.8rem 0;
     background-size: 1.5rem;
   }
-
   .testimonial_card {
     max-width: 28rem;
     padding: 2.4rem 2rem 2.1rem;
@@ -833,12 +367,12 @@ svg > path {
     max-width: 118rem;
     margin: 0 auto;
   }
-
   .testimonial_card {
     max-width: 36rem;
     padding: 4rem 2.6rem 2.6rem;
   }
 }
+
 @media (max-width: 959px) {
   .testimonial_card:not(:last-child) {
     margin-bottom: 2.4rem;
@@ -849,6 +383,7 @@ svg > path {
     margin-right: 4rem;
   }
 }
+
 @media (max-width: 959px) {
   .profile {
     margin-top: 1.7rem;
@@ -859,6 +394,7 @@ svg > path {
     margin-top: 2.4rem;
   }
 }
+
 @media (max-width: 799px) {
   .call-to-action__container {
     padding: 4rem 2.8rem 3.7rem;
@@ -869,6 +405,7 @@ svg > path {
     padding: 4.2rem 7.7rem 4.1rem;
   }
 }
+
 @media (max-width: 739px) {
   .input-group {
     margin-top: 3.2rem;
@@ -881,18 +418,17 @@ svg > path {
     flex-direction: row;
     justify-content: space-between;
   }
-
   .email-input {
     max-width: 48rem;
     width: 100%;
     margin-right: 3rem;
   }
-
   .button--cta {
     width: 40%;
     max-width: 20rem;
   }
 }
+
 @media (max-width: 739px) {
   .email-input {
     font-size: 1rem;
@@ -907,11 +443,13 @@ svg > path {
     padding: 1.6rem 3.8rem;
   }
 }
+
 @media (max-width: 739px) {
   .email-input {
     margin-bottom: 2.4rem;
   }
 }
+
 @media (max-width: 639px) {
   .footer-container {
     padding: 7.4rem 2.8rem 0;
@@ -922,6 +460,7 @@ svg > path {
     padding: 8rem 2.8rem 0;
   }
 }
+
 @media (min-width: 1306px) {
   .footer-container {
     padding: 8rem 0 0;
@@ -929,13 +468,13 @@ svg > path {
     margin: 0 auto;
   }
 }
+
 @media (max-width: 639px) {
   .footer-content {
     margin-top: 4rem;
     display: flex;
     flex-flow: column nowrap;
   }
-
   .footer-nav:last-of-type {
     margin-bottom: 8rem;
   }
@@ -947,52 +486,9 @@ svg > path {
     flex-flow: row wrap;
   }
 }
+
 @media (min-width: 517px) and (max-width: 828px) {
   .address {
     margin-bottom: 4rem;
   }
 }
-html {
-  box-sizing: border-box;
-  font-size: 62.5%;
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-}
-
-body,
-h1,
-h2,
-h3,
-h4,
-p {
-  margin: 0;
-}
-
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-a {
-  color: white;
-  text-decoration: none;
-  border-bottom: 1px solid transparent;
-  transition: 300ms ease-in-out border-color, 300ms ease-in-out color;
-}
-
-a:hover {
-  color: #65e2d9;
-  border-color: #65e2d9;
-}
-
-body {
-  color: white;
-  background-color: #1c2431;
-}
-
-/*# sourceMappingURL=main.css.map */
