--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -1,3 +1,45 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:400,700&display=swap");
 @import "./_vars.scss";
 @import "./_styles.scss";
+@import "./_media.scss";
+
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+p {
+  margin: 0;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+a {
+  color: $white;
+  text-decoration: none;
+  border-bottom: 1px solid transparent;
+  transition: $transition border-color, $transition color;
+}
+a:hover {
+  color: $cyan;
+  border-color: $cyan;
+}
+
+body {
+  color: $white;
+  background-color: $light-bg;
+}
